syntax = "proto3";

option java_package = "org.robotninjas.stream.proto";
option optimize_for = SPEED;
option java_multiple_files = true;

import "Start.proto";
import "Backpressure.proto";
import "Batching.proto";

message Read {
    message Record {
        bytes offset = 1;
        bytes data = 2;
        uint64 txid = 3;
        uint64 seq = 4;
    }

    message Request {
        string name = 1;
        Start start = 2;
        BackPressureStrategy back_pressure_strategy = 3;
        BatchingStrategy batching_strategy = 4;
    }

    message Success {
        repeated Record batch = 1;
    }

    message Failure {
//        oneof reason {
//            
//        }
    }

    message Response {
        oneof response {
            Success success = 1;
            Failure failure = 2;
        }
    }
}

service ReadProxy {
    rpc Read (Read.Request) returns (stream Read.Response);
}
